Initialized ui codebase with basic setup

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+input:focus, textarea:focus, select:focus {
+  outline: none;
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400 700;
+    src: url('assets/fonts/OpenSans-Italic-VariableFont_wdth\,wght.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: url('assets/fonts/OpenSans-VariableFont_wdth\,wght.ttf') format('truetype');
+}
