--- a/src/app/modules/shared/components/message-popup/message-popup.component.html
+++ b/src/app/modules/shared/components/message-popup/message-popup.component.html
@@ -3,5 +3,5 @@
     <div class="border-b-2 my-4 line"></div>
     <div class="card-header text-[16px]">{{ msgBody }}</div>
     <div class="card-header text-[16px] my-4">{{ msgFooter }}</div>
-    <button class="popup-button h-10 w-[100px] text-[16px] mb-4 rounded-sm" (click)="close()">Ok</button>
+    <button class="primary-btn h-10 w-[100px] text-[16px] mb-4 rounded-sm" (click)="close()">Ok</button>
 </div>
