--- a/src/assets/themes/dark-teal.css
+++ b/src/assets/themes/dark-teal.css
@@ -66,60 +66,26 @@
 }
 
 .main-background {
-    background-color: #020202;
     color: #C0BFC4;
     font-family: Arial, sans-serif;
 }
 
-.header {
+
+
+/* .sidebar-header {
+    color: #dddddd;
+} */
+.active-sidebar-link {
     color: #1DC1A8;
+    border-right: 2px solid #1DC1A8;
 }
-
-.navbar {
-    backdrop-filter: blur(21px);
-    -webkit-backdrop-filter: blur(21px);
-    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.36);
-    color: #79787D;
-}
-.secondary-navbar {
-    backdrop-filter: blur(21px);
-    -webkit-backdrop-filter: blur(21px);
-    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.36);
-    color: #cccccc;
-}
-
-.sidebar {
-    color: #cccccc;
-}
-.sidebar-bg {
-    backdrop-filter: blur(21px);
-    -webkit-backdrop-filter: blur(21px);
-    border-right: 1px solid rgb(255, 155, 155, 0.16);
-}
-
-.sidebar-link {
+/* .sidebar-link {
     color: #cccccc;
 }
 .sidebar-link:hover {
     color: #f5f5f5;
     transition: 0.2s ease-in-out;
-}
-
-.card {
-    background: linear-gradient(
-        135deg,
-        rgba(255, 255, 255, 0.055),
-        rgba(255, 255, 255, 0.055)
-    );
-    backdrop-filter: blur(1px);
-    -webkit-backdrop-filter: blur(1px);
-    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.36);
-    border: 1px solid rgb(255, 155, 155, 0.16);
-    border-radius: 5px;
-}
-.card-header {
-    color: whitesmoke;
-}
+} */
 
 .button {
     background-color: #1d1d1d;
@@ -129,8 +95,8 @@
     transition: 0.2s;
 }
 .button:hover {
-    background-color: #222222;
-    border-color: #1a1a1a;
+    background-color: #272727;
+    border-color: #1f1f1f;
     transition: 0.2s ease-in-out;
 }
 
@@ -142,19 +108,6 @@
 .active-button {
     color: #058169;
     border: 1px solid #058169;
-}
-
-.delete-button {
-    background-color: #720808;
-    border-color: #5B0A09;
-    box-shadow: 0 8px 32px 0 rgba(31, 31, 31, 0.36);
-    color: #cccccc;
-    transition: 0.2s;
-}
-.delete-button:hover {
-    background-color: #500A0A;
-    border-color: #340A0B;
-    transition: 0.2s ease-in-out;
 }
 
 .icon-color {
@@ -194,4 +147,228 @@
     background-color: #0e0e0e;
     border-color: #0f0f0f;
     transition: 0.2s ease-in-out;
+}
+
+
+
+
+
+.header {
+    color: whitesmoke;
+}
+
+.navbar {
+    background-color: rgba(0, 0, 0, 0.15);
+    backdrop-filter: blur(21px);
+    -webkit-backdrop-filter: blur(21px);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.45);
+    color: #79787D;
+}
+.secondary-navbar {
+    background-color: rgba(0, 0, 0, 0.15);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.45);
+    color: #cccccc;
+}
+
+.sidebar {
+    background-color: rgba(0, 0, 0, 0.15);
+    backdrop-filter: blur(21px);
+    -webkit-backdrop-filter: blur(21px);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.45);
+    color: #cccccc;
+}
+.sidebar-bg {
+    backdrop-filter: blur(21px);
+    -webkit-backdrop-filter: blur(21px);
+    border-right: 1px solid rgb(255, 155, 155, 0.16);
+}
+
+.sidebar-btn {
+    color: #bbbbbb;
+    transition: 0.4s ease;
+}
+.sidebar-btn:hover {
+    background-color: #131313;
+    border-color: #1f1f1f;
+    box-shadow: 0 8px 32px 0 rgba(31, 31, 31, 0.36);
+    color: whitesmoke;
+    transition: 0.4s ease-in-out;
+}
+.sidebar-divider {
+    border-color: whitesmoke;
+}
+.sidebar-header {
+    background-color: rgba(0, 0, 0, 0);
+    color: whitesmoke;
+}
+.sidebar-link {
+    color: #bbbbbb;
+    transition: 0.4s ease;
+}
+.sidebar-link:hover {
+    color: whitesmoke;
+    transition: 0.4s ease-in-out;
+}
+
+/* Buttons */
+.primary-btn {
+    --clr-font-main: hsla(0 0% 20% / 100);
+    --btn-bg-1: hsla(169 83% 12% / 1);
+    --btn-bg-2: hsla(170 83% 14% / 1);
+    position: relative;
+    transition: 0.8s ease;
+    background-size: 280% auto;
+    border: 1px solid var(--btn-bg-1);
+    color: whitesmoke;
+    background: #05372E;
+    box-shadow: inset -5px -5px 10px #042f27, inset 5px 5px 10px #063f35;
+    transition: 0.5s ease-in-out;
+}
+.primary-btn:hover {
+    background: linear-gradient(315deg, #053b31, #053229);
+    box-shadow:  -1px -1px 2px #042f27, 1px 1px 2px #063f35;
+    transition: 0.8s ease-in-out;
+}
+
+.secondary-btn {
+    --color: #058169;
+    --hover-color: #05372E;
+    font-family: inherit;
+    display: inline-block;
+    overflow: hidden;
+    cursor: pointer;
+    z-index: 1;
+    color: var(--color);
+    border: 1px solid var(--color);
+    position: relative;
+    transition: 0.5s ease-in-out;
+}
+.secondary-btn:hover {
+    background: linear-gradient(315deg, #053229, #053b31);
+    box-shadow:  -1px -1px 5px #042f27, 1px 1px 2px #063f35;
+    border: 1px solid #063f35;
+    transition: 0.8s ease-in-out;
+    color: whitesmoke;
+}
+.secondary-btn::before {
+    position: absolute;
+    content: "";
+    background: var(--hover-color);
+    height: 150px;
+    width: 200px;
+    z-index: -1;
+    border-radius: 50%;
+    background-image: linear-gradient(
+        120deg,
+        rgba(255, 255, 255, 0) 30%,
+        rgba(255, 255, 255, 0.3),
+        rgba(255, 255, 255, 0) 70%
+    );
+    animation: shine 3s infinite linear;
+}
+.secondary-btn:before {
+    top: 100%;
+    left: 100%;
+    transition: 0.3s all;
+}
+.secondary-btn:hover::before {
+    top: -30px;
+    left: -30px;
+}
+
+.disabled-btn {
+    border: 1px solid #aaaaaa;
+    color: #aaaaaa;
+    transition: 0.3s ease;
+}
+
+.delete-button {
+    border-color: #5B0A09;
+    color: #cccccc;
+    transition: 0.5s ease-in-out;
+    background: #720808;
+    box-shadow: inset -5px -5px 10px #610707, inset 5px 5px 10px #830909;
+}
+.delete-button:hover {
+    background: linear-gradient(315deg, #7a0909, #670707);
+    box-shadow:  -1px -1px 2px #610707, 1px 1px 2px #830909;
+}
+.delete-btn-outline {
+    --color: red;
+    --hover-color: #720808;
+    font-family: inherit;
+    display: inline-block;
+    overflow: hidden;
+    cursor: pointer;
+    z-index: 1;
+    color: var(--color);
+    border: 1px solid var(--color);
+    position: relative;
+    transition: 0.5s ease-in-out;
+}
+.delete-btn-outline:hover {
+    background: linear-gradient(315deg, #670707, #7a0909);
+    box-shadow:  -1px -1px 5px #610707, 1px 1px 5px #830909;
+    border: 1px solid #5B0A09;
+    transition: 0.8s ease-in-out;
+    color: whitesmoke;
+}
+.delete-btn-outline::before {
+    position: absolute;
+    content: "";
+    background: var(--hover-color);
+    height: 150px;
+    width: 200px;
+    z-index: -1;
+    border-radius: 50%;
+    background-image: linear-gradient(
+        120deg,
+        rgba(255, 255, 255, 0) 30%,
+        rgba(255, 255, 255, 0.2),
+        rgba(255, 255, 255, 0) 70%
+    );
+    animation: shine 3s infinite linear;
+}
+.delete-btn-outline:before {
+    top: 100%;
+    left: 100%;
+    transition: 0.3s all;
+}
+.delete-btn-outline:hover::before {
+    top: -30px;
+    left: -30px;
+}
+
+.primary-btn-icon {
+    color: whitesmoke;
+}
+
+/* Card */
+.card {
+    background: linear-gradient(
+        135deg,
+        rgba(255, 255, 255, 0.05),
+        rgba(255, 255, 255, 0.05)
+    );
+    backdrop-filter: blur(1px);
+    -webkit-backdrop-filter: blur(1px);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.2);
+    border: 1px solid rgb(255, 155, 155, 0.1);
+    border-radius: 5px;
+}
+.card-header {
+    color: whitesmoke;
+}
+
+/* Media query */
+@media (prefers-reduced-motion: reduce) {
+    .btn-donate {
+        transition: linear;
+    }
+}
+
+@keyframes shine {
+    0% {left: -100px}
+    20% {left: 100%}
+    100% {left: 100%}
 }
