--- a/src/app/modules/user/modules/user/components/user-profile/user-profile.component.html
+++ b/src/app/modules/user/modules/user/components/user-profile/user-profile.component.html
@@ -6,16 +6,21 @@
                     <img [src]="previewImg" alt="" class="profile-img w-[180px] h-[170px]" [ngClass]="{'w-8/12': imageHeaderSpan === 1, 'w-4/12': imageHeaderSpan === 2}">
                 </div>
                 <div class="flex flex-col items-center justify-center" *ngIf="imageHeaderSpan === 1">
-                    <div class="text-[16x] font-normal card-header">{{ imageHeader }}</div>
+                    <div class="text-[16px] font-normal card-header">{{ imageHeader }}</div>
                     <input type="file" id="imageInput" accept="image/*" (change)="onFileSelected($event)" hidden>
                     <div class="flex align-middle gap-4">
                         <div *ngFor="let action of userImgActions">
-                            <button class="button h-10 text-[16px] mt-4 rounded-sm" (click)="triggerImgAction(action)">{{ action.label }}</button>
+                            <div *ngIf="action.type === 'submit'; else otherBtn">
+                                <button class="primary-btn w-[100px] h-10 text-[16px] mt-4 rounded-sm" (click)="triggerImgAction(action)">{{ action.label }}</button>
+                            </div>
+                            <ng-template #otherBtn>
+                                <button class="delete-btn-outline w-[100px] h-10 text-[16px] mt-4 rounded-sm" (click)="triggerImgAction(action)">{{ action.label }}</button>
+                            </ng-template>
                         </div>
                     </div>
 
                     <div *ngIf="fileName">
-                        <div class="card-header text-[12px] font-normal mt-6" [matTooltip]="fileName">{{ preview }}: {{ fileName }}</div>
+                        <div class="card-header text-sm font-normal mt-6 max-w-[200px] overflow-hidden text-nowrap text-ellipsis" [matTooltip]="fileName">{{ preview }}: {{ fileName }}</div>
                         <div class="flex align-middle justify-center mt-2 space-x-4 text-lg">
                             <mat-icon fontIcon="upload" class="cursor-pointer success-btn" [matTooltip]="confirmUpload" (click)="updateImage()"></mat-icon>
                             <mat-icon fontIcon="delete" class="cursor-pointer delete-btn" [matTooltip]="cancelUpload" (click)="cancelImageUpload()"></mat-icon>
@@ -33,7 +38,7 @@
                         <textarea class="mt-4 p-2 w-full rounded-sm form-field" rows="5" [placeholder]="field.placeholder" [formControlName]="field.field" [readonly]="field.readonly"></textarea>
                     </div>
                     <div *ngFor="let action of userBioActions">
-                        <button class="button h-10 text-[16px] my-4 rounded-sm" (click)="onUserBioSubmit()">{{ action.label }}</button>
+                        <button class="primary-btn w-[100px] h-10 text-[16px] my-4 rounded-sm" (click)="onUserBioSubmit()">{{ action.label }}</button>
                     </div>
                 </form>
             </div>
