--- a/src/assets/themes/dark-teal.css
+++ b/src/assets/themes/dark-teal.css
@@ -152,7 +152,7 @@
 
 
 
-
+/* TODO - Final */
 .header {
     color: whitesmoke;
 }
@@ -358,6 +358,47 @@
 }
 .card-header {
     color: whitesmoke;
+}
+
+/* Toggle Button */
+.toggle-btn .slider {
+    width: 50px;
+    height: 20px;
+    border-radius: 10px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    border: 3px solid transparent;
+    transition: .3s;
+    cursor: pointer;
+    background-color: lightgray;
+    box-shadow: 0 0 10px 0 rgb(0, 0, 0, 0.25) inset;
+}
+.toggle-btn .slider::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    transform: translateX(-30px);
+    border-radius: 10px;
+    transition: .3s;
+    box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.25);
+    background-color: whitesmoke;
+}
+.checkbox:checked ~ .slider::before {
+    transform: translateX(30px);
+    box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.25);
+}
+.checkbox:checked ~ .slider {
+    background-color: #05372E;
+}
+.checkbox:active ~ .slider::before {
+    transform: translate(0);
+}
+
+/* Texts */
+.text-heading-2 {
+    color: #bbbbbb;
 }
 
 /* Media query */
